界面样式小修改

--- a/pages/product/detail.wxss
+++ b/pages/product/detail.wxss
@@ -55,7 +55,7 @@
   text-align: center;
   color: #fff;
   position: fixed;
-  background: #ec702e;
+  background: #2e2747;
   display: flex;
   flex-flow: row nowrap;
 }
